<resources>
    <string name="app_name">subs3_jetpack-dagger-submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_movie_tv">DetailMovieTvActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="frag_mov">Movie</string>
    <string name="frag_tv">TV Show</string>
    <string name="nofavoriteisempty">Maaf Kamu tidak memiliki item favorite</string>
    <string name="noconn">Maaf tidak ada koneksi</string>
    <string name="noitemfav">Maaf tidak ada item favorite</string>
    <string name="botnavmov">Movies</string>
    <string name="botnavtv">Tv Show</string>
    <string name="botnavfav">Favorite</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="frag_fav">Favorite</string>

</resources>